--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Dámské běžecké boty</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Rubik:400,500" rel="stylesheet">
     </head>
     <body>
 
@@ -41,7 +42,7 @@
                 <p class="produkt">Dámská běžecká bota</p>
 
                 <p class="popis">
-                    Nike Air Zoom Pegasus 33 dokonale padne, dodá pocit rychlosti a má pružné tlumení, které ti umožní zrychlit tempo a soustředit se na rychlost.
+                    Nike Air Zoom Pegasus 33 dokonale padne, dodá pocit rychlosti a má pružné tlumení, které ti umožní zrychlit tempo a&nbsp;soustředit se na rychlost.
                 </p>
 
                 <h2 class="parametr">Velikost</h2>
